quizapp/kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quizapp
  namespace: quiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quizapp
  template:
    metadata:
      labels:
        app: quizapp
    spec:
      containers:
        - name: quizapp
          image: viktorsaveski7/quizapp:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: quizapp-config
