quizapp/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quizapp
  namespace: quiz
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: quizapp
