quizapp/kubernetes/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip
  namespace: quiz
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /kiii
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: quiz
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: quiz-strip@kubernetescrd
spec:
  rules:
  - host: quiz.kiii.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: quizapp
              port:
                number: 8081
        - path: /kiii
          pathType: Prefix
          backend:
            service:
              name: quizapp
              port:
                number: 8081
